More styling, Update user info(PUT), clear eventForms, fix time overlap

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -8,10 +8,36 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: center;
     background-color: #2C423F;
     color: #C5C5C5;
     padding: 10px 20px;
     text-align: center;
+}
+
+.header-section {
+    flex: 1; 
+    text-align: center;
+}
+
+.header-section.left {
+    text-align: left; 
+}
+
+.header-section.right {
+    text-align: right;             
+}
+
+.greeting {
+    margin-top: 10px;
+    margin-left: 10px; 
+    font-size: 22px; 
+    background-color: #465955;
+    color: #C5C5C5; 
+    padding: 8px 12px; 
+    border-radius: 12px; /* Rounded corners to create a bubble effect */
+    display: inline-block;
 }
 
 h2, h3, h4 {
@@ -27,7 +53,7 @@ h2 {
 
 nav ul {
     list-style-type: none; /* Removes bullet points from the list */
-    padding: 0; /* Removes padding around the list */
+    margin-top: 20px; 
 }
 
 nav ul li {
@@ -38,8 +64,8 @@ nav ul li {
 nav ul li a {
     color: white; 
     background-color: #899093; 
-    padding: 10px 15px; /* Adds padding around the text */
-    border-radius: 20px; /* Rounded corners to create a bubble effect */
+    padding: 10px 15px; 
+    border-radius: 20px; 
     text-decoration: none; /* Removes underline from links */
     transition: background-color 0.3s; /* Smooth transition for hover effects */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
@@ -91,12 +117,12 @@ nav ul li a:hover {
 }
 
 .form-group {
-    margin-bottom: 15px; /* Spacing between each form group */
+    margin-bottom: 15px; 
 }
 
 .form-group label {
-    display: block; /* Makes the label take up the full width, ensuring the input starts on a new line */
-    margin-bottom: 5px; /* Spacing between the label and the input */
+    display: block; 
+    margin-bottom: 5px; 
 }
 
 form-group input[type="text"],
@@ -126,6 +152,14 @@ form-group input[type="text"],
     padding: 10px;    
 }
 
+.profileModel-content button{
+    margin-top: 10px;
+    padding: 5px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto; /* Auto margins center button */
+}
+
 .filter-buttons {
     display: flex; 
     justify-content: center; 
@@ -148,7 +182,7 @@ button {
     cursor: pointer;
     font-size: 16px;
     display: block;
-    transition: background-color 0.3s; /* Smooth transition for hover effects */
+    transition: background-color 0.3s;
 }
 
 button:hover {
@@ -156,7 +190,7 @@ button:hover {
 }
 
 table {
-    width: 100%; /* Full-width to use available space */
+    width: 100%; 
     border-collapse: collapse; /* Collapses border to avoid double borders */
     box-shadow: 0 2px 15px rgba(0,0,0,0.2);
     border-radius: 8px; /* Rounded corners for the table */
@@ -165,7 +199,7 @@ table {
 }
 
 th, td {
-    border-bottom: 1px solid #ddd; /* Light border for separating rows */
+    border-bottom: 1px solid #ddd; /* border for separating rows */
     padding: 8px;
     text-align: left;
     font-weight: 500;
@@ -186,32 +220,41 @@ tbody tr:nth-child(odd) {
     background-color: #899093; /* Change background every other row */
 }
 
-.model {
+.updateModel {
     position: fixed; /* Positions the modal relative to the viewport */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /* Centers the modal */
     width: 90%; /* Responsive width */
-    max-width: 400px; /* Reduced maximum width */
-    min-height: 300px; /* Sets a minimum height to make the modal taller */
+    max-width: 400px; 
+    min-height: 300px; 
     background: white;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+    border: 3px solid #465955;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.5);
     padding: 20px;
     border-radius: 8px;
     z-index: 1000; /* Ensures it's above other content */
     display: none; /* Hide by default */
 }
 
-.model label {
+.updateModel label {
     display: block; 
     margin-bottom: 5px;
 }
 
-.model-content {
+.updateModel-content {
     margin: 20px;
 }
 
 .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 24px;
+}
+
+.p-close-button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -230,4 +273,40 @@ footer {
     font-family: 'Merriweather', serif; 
     font-size: 18px;
 }
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001; /* Sit on top */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px; 
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.profileModel-content {
+    background-color: #fefefe;
+    margin: auto;
+    width: 80%;
+    max-width: 500px; 
+    text-align: center;
+    border-radius: 10px;
+    padding: 20px;
+}
+
 
